# market-mind

./: .gitignore  CLAUDE.md  MarketMind_PRD_v2_FINAL.md  README.md
client/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
client/src/: main.tsx
client/src/types/: analytics.ts  game.ts  index.ts  user.ts  websocket.ts
docs/: ARCHITECTURE.md  CONTRACTS.md
docs/api/: REST.md  WEBSOCKET.md
docs/schemas/: session_config.schema.json  session_result.schema.json  websocket_client.schema.json  websocket_server.schema.json
server/: .env.example  README.md  pyproject.toml  requirements.txt  types.py
server/agents/: README.md  base.py
server/analytics/: README.md
server/api/: README.md
server/db/: README.md
server/engine/: README.md  types.py
