[project]
name = "marketmind-server"
version = "0.1.0"
description = "MarketMind - Real-time market making simulator backend"
requires-python = ">=3.12"
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
